# maxdb

./: maxdb-client-1.0.deb  maxdb-server-1.0.deb
client/: Cargo.toml
client/src/: auth.rs  config.json  main.rs  protocol.rs
server/: Cargo.toml  config.json
server/src/: main.rs  storage.rs
