[package]
name = "leomaxuz_maxdb_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ring = "0.16"
clap = { version = "4", features = ["derive"] }
openssl = "0.10"
bincode = "1.3"
hex = "0.4"
